# docuweb

./: .gitignore  README.md  main.py  manage.py  pyproject.toml  requirements.txt
docuweb/: asgi.py  settings.py  urls.py  wsgi.py
security/: urls.py
security/middlewares/: __init__.py  ms_oauth_middleware copy.py  ms_oauth_middleware.py
security/migrations/: 0001_initial.py
